# speech_synthesizer

./: CMakeLists.txt  README.md  exampl.txt  main.cpp
include/: AudioLibrary.h  DataLoader.h  Reader.h  Speaker.h
src/: AudioLibrary.cpp  CMakeLists.txt  DataLoader.cpp  Reader.cpp  Speaker.cpp
